--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "PAH",
-  "name": "Pediatric Anesthesiology Helper",
+  "short_name": "Pediatrica",
+  "name": "Pediatrica: Pediatric Anesthesiology Helper",
   "icons": [
     {
       "src": "favicon.ico",
