--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Pediatrica",
-  "name": "Pediatrica: Pediatric Anesthesiology Helper",
+  "name": "Pediatrica",
   "icons": [
     {
       "src": "favicon.ico",
